kubernetes/apps/homepage/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  hostnames: ["home.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: homepage
          namespace: homepage
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
